<resources>
    <string name="app_name">匠心</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="main_tab1_zixun">资讯</string>
    <string name="main_tab2_zihui">资汇</string>
    <string name="main_tab2_zihui_subtitle1">文章</string>
    <string name="main_tab2_zihui_subtitle2">帖子</string>
    <string name="main_tab2_zihui_subtitle3">问题集</string>
    <string name="main_tab3_activity">活动</string>
    <string name="main_tab3_activity_btn_text_start_test">开始测试</string>
    <string name="main_tab3_activity_test">在线测试</string>
    <string name="main_tab3_activity_common_reminder_text">挑战专业自测！已有10万人完成自测！</string>
    <string name="main_tab3_activity_test_sub_text">点滴经验汇聚专业题库  夯实知识助力技术提升</string>
    <string name="main_tab3_activity_test_explanation_text">测试说明</string>
    <string name="main_tab4_mine">我的</string>

    <string name="main_tab1_search_hint">资讯内容搜索</string>
    <string name="main_tab2_search_hint">资汇内容搜索</string>
    <string name="main_search_view_default_frame_title">今日热搜</string>
    <string name="main_search_input_frame_title1">作者</string>
    <string name="main_search_input_frame_title2">热门话题</string>

    <string name="main_drawer_menu_zixun">行业资讯</string>
    <string name="main_drawer_menu_profession">专业事件</string>
    <string name="main_drawer_menu_article">精选文章</string>
    <string name="main_drawer_menu_answer">精选问答</string>
    <string name="main_drawer_menu_topic">热门话题</string>
</resources>
