<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drawer_zixun"
            android:icon="@mipmap/ic_drawer_menu_zixun"
            android:title="@string/main_drawer_menu_zixun" />
        <item
            android:id="@+id/nav_drawer_profession"
            android:icon="@mipmap/ic_drawaer_menu_profession"
            android:title="@string/main_drawer_menu_profession" />
        <item
            android:id="@+id/nav_drawer_article"
            android:icon="@mipmap/ic_drawer_menu_article"
            android:title="@string/main_drawer_menu_article" />
        <item
            android:id="@+id/nav_drawer_answer"
            android:icon="@mipmap/ic_drawer_menu_answer"
            android:title="@string/main_drawer_menu_answer" />
        <item
            android:id="@+id/nav_drawer_topic"
            android:icon="@mipmap/ic_drawer_menu_topic"
            android:title="@string/main_drawer_menu_topic" />
    </group>

</menu>
