<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/line">
        </FrameLayout>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_above="@+id/main_bottom_tabs_radios"
            android:background="@color/colorPrimary" />

        <RadioGroup
            android:id="@+id/main_bottom_tabs_radios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:minHeight="60dp"
            android:background="@color/main_bottom_tabs_bg"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/tab1_rb_zixun"
                style="@style/main_bottom_tabs"
                android:drawableTop="@drawable/main_tab1_selector"
                android:text="@string/main_tab1_zixun" />

            <RadioButton
                android:id="@+id/tab2_rb_zihui"
                style="@style/main_bottom_tabs"
                android:drawableTop="@drawable/main_tab2_selector"
                android:text="@string/main_tab2_zihui" />

            <RadioButton
                android:id="@+id/tab3_rb_activity"
                style="@style/main_bottom_tabs"
                android:drawableTop="@drawable/main_tab3_selector"
                android:text="@string/main_tab3_activity" />

            <RadioButton
                android:id="@+id/tab4_rb_mine"
                style="@style/main_bottom_tabs"
                android:checked="true"
                android:drawableTop="@drawable/main_tab4_selector"
                android:text="@string/main_tab4_mine" />
        </RadioGroup>
    </RelativeLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>
