<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/bg_tab3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <TextView
            android:id="@+id/main_tab3_online_texts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/main_tab3_online_test_text_size"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/main_tab3_activity_test"/>

        <LinearLayout
            android:id="@+id/main_tab3_online_test_sub_text_layout"
            android:layout_below="@+id/main_tab3_online_texts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/main_tab3_online_test_sub_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/main_tab3_online_test_sub_text_size"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:text="@string/main_tab3_activity_test_sub_text"/>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/main_tab3_online_test_ranking_layout"
            android:layout_below="@+id/main_tab3_online_test_sub_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="160dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:background="@drawable/main_tab3_frame_shape">

        </LinearLayout>

        <TextView
            android:id="@+id/main_tab3_reminder_text"
            android:layout_below="@+id/main_tab3_online_test_ranking_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/main_tab3_online_test_ranking_text_color"
            android:textSize="@dimen/main_tab3_online_test_sub_text_size"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:text="@string/main_tab3_activity_common_reminder_text"/>

        <LinearLayout
            android:id="@+id/main_tab3_online_test_latest_list_layout"
            android:layout_below="@+id/main_tab3_reminder_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="160dp"
            android:orientation="horizontal"
            android:background="@drawable/main_tab3_frame_shape">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_tab3_personal_test_frame_layout"
            android:layout_below="@+id/main_tab3_online_test_latest_list_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:background="@drawable/main_tab3_frame_shape">
            
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content">

            </RelativeLayout>
            
            <Button
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/main_tab3_btn_start_test_selector"
                android:text="@string/main_tab3_activity_btn_text_start_test"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_tab3__test_explanation_frame_layout"
            android:layout_below="@+id/main_tab3_personal_test_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/main_tab3_frame_shape">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@mipmap/ic_attention"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/main_tab3_online_test_explanation_text_size"
                android:textStyle="bold"
                android:text="@string/main_tab3_activity_test_explanation_text"/>

        </LinearLayout>



    </RelativeLayout>

</LinearLayout>